# null--nostr

./: .env.example  .gitignore  AGENTS.md  BUILD_ANDROID.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  REACT_NATIVE_MIGRATION_PROMPT.md  README.md  capacitor.config.ts  instrumentation.js  next.config.js  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  vercel.json  vitest.config.ts  vitest.setup.ts  zapstore.yaml
.github/workflows/: build-android.yml
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @noble.js  @scure.js  @swc.js  next.js  nostr-tools.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/css/app/: layout.css
.next/static/webpack/: webpack.6d0a93ee3932d8f8.hot-update.js
.next/static/webpack/app/: layout.6d0a93ee3932d8f8.hot-update.js
.next/types/app/: layout.ts  page.ts
android/: build.gradle.kts  gradlew  settings.gradle.kts
android-app/: README.md  gradle.properties  gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/gradle/: libs.versions.toml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  nostrdb-jni.c
android/gradle/: libs.versions.toml
android/shared/: build.gradle.kts
android/test-jvm/: pom.xml
app/: globals.css  globals.tokens.css  layout.js  page.js
app/api/dm/: route.js
app/api/elevenlabs/token/: route.js
app/api/feed/: route.js
app/api/ingest/: route.js
app/api/nip05/: route.js
app/api/profile/[pubkey]/: route.js
app/api/profile/batch/: route.js
app/api/publish/: route.js
app/api/relay/: route.js
app/api/relay/reconnect/: route.js
app/api/rust-status/: route.js
app/api/search/: route.js
app/api/social/follows/: route.js
app/api/stream/: route.js
components/: BadgeDisplay.js  BirdwatchDisplay.js  BirdwatchModal.js  BottomNav.js  ClientLayout.js  DivineVideoRecorder.js  EmojiPicker.js  ErrorBoundary.js  EventBackupApp.js  HomeTab.js  LoginScreen.js  LongFormPostItem.js  MiniAppModal.js  MiniAppTab.js  NotificationModal.js  PolisApp.js  PostItem.js  PostModal.js  ReactionEmojiPicker.js  ReportModal.js  SchedulerApp.js  SearchModal.js  SignUpModal.js  SkeletonLoader.js  TalkTab.js  TimelineTab.js  Toast.js  URLPreview.js  UserProfileView.js  VideoEditor.js  WalletTab.js  ZapGoalApp.js  ZapModal.js
components/miniapps/: BadgeSettings.js  ElevenLabsSettings.js  EmojiSettings.js  MuteList.js  RelaySettings.js  SchedulerApp.js  UploadSettings.js  VanishRequest.js  ZapSettings.js
design-tokens/: COMPONENT_MAP.md  constants.json  generate.mjs  tokens.json
docs/: COMMUNITY_NOTES_PROPOSAL.md  MULTIPLATFORM_ARCHITECTURE_PLAN.md  PLURALITY_PROPOSAL.md  index.html  privacy.html
hooks/: index.js  useConnectionStatus.js  useNostrEvents.js  useNostrSubscription.js  useProfile.js  useSTT.js
ios/: DESIGN.md  GUARDRAILS.md
lib/: cache.js  connection-manager.js  constants.generated.js  constants.js  errors.js  filters.js  geohash.js  imageUtils.js  nip46.js  nostr-sse.js  nostr.js  outbox.js  pow.js  proofmode.js  recommendation.js  rust-bridge.js  rust-engine-manager.js  secure-key-store.js  security.js  validation.js  wot.js
lib/compat/: index.ts  signing.ts  storage.ts
public/: manifest.json  privacy.html  sw.js
public/.well-known/: assetlinks.json  nostr.json
rust-engine/: Cargo.toml
rust-engine/.cargo/: config.toml
rust-engine/nurunuru-core/: Cargo.toml
rust-engine/nurunuru-core/src/: config.rs  engine.rs  error.rs  filters.rs  lib.rs  mls.rs  recommendation.rs  relay.rs  types.rs  validation.rs
rust-engine/nurunuru-ffi/: Cargo.toml  build.rs
rust-engine/nurunuru-ffi/android/: build.gradle.kts
rust-engine/nurunuru-ffi/android/src/main/kotlin/io/nurunuru/: NuruNuruBridge.kt
rust-engine/nurunuru-ffi/bindgen/: Makefile  gen_kotlin.sh  gen_swift.sh
rust-engine/nurunuru-ffi/bindgen/kotlin-out/uniffi/nurunuru/: nurunuru.kt
rust-engine/nurunuru-ffi/ios/: Package.swift
rust-engine/nurunuru-ffi/ios/Sources/NuruNuru/: NuruNuruClient+Extensions.swift
rust-engine/nurunuru-ffi/src/: lib.rs  nurunuru.udl
rust-engine/nurunuru-napi/: Cargo.toml  package.json
rust-engine/nurunuru-napi/src/: lib.rs
src/: index.ts
src/__tests__/: recommendation.test.ts
src/__tests__/adapters/: signing.test.ts  storage.test.ts
src/__tests__/integration/: store-adapters.test.ts
src/__tests__/platform/: detect.test.ts
src/__tests__/store/: hooks.test.tsx  store.test.ts
src/__tests__/utils/: test-utils.tsx
src/adapters/: index.ts
src/adapters/clipboard/: CapacitorClipboard.ts  ClipboardAdapter.ts  ElectronClipboard.ts  MockClipboard.ts  WebClipboard.ts  index.ts
src/adapters/network/: CapacitorNetwork.ts  ElectronNetwork.ts  MockNetwork.ts  NetworkAdapter.ts  WebNetwork.ts  index.ts
src/adapters/signing/: AmberSigner.ts  MemorySigner.ts  Nip07Signer.ts  NosskeySigner.ts  SigningAdapter.ts  index.ts
src/adapters/storage/: CapacitorStorage.ts  ElectronStorage.ts  MemoryStorage.ts  StorageAdapter.ts  WebStorage.ts  index.ts
src/core/store/: hooks.ts  index.ts  persist.ts  types.ts
src/lib/compat/: index.ts  storage.ts  store.ts
src/platform/: capacitor.ts  container.ts  detect.ts  electron.ts  index.ts  web.ts
src/types/: capacitor.d.ts
src/ui/: index.ts  types.ts
src/ui/components/: index.ts
src/ui/hooks/: index.ts  useSettings.ts  useTimeline.ts
src/ui/utils/: hashtags.ts  index.ts
(+208 files in other folders)
