[workspace]
members = ["nurunuru-core", "nurunuru-ffi", "nurunuru-napi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NuruNuru Team"]
description = "High-performance Nostr engine for the NuruNuru client"

[workspace.dependencies]
nostr-sdk = { version = "0.44", features = ["all-nips"] }
nostr = "0.44"
nostr-ndb = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
