[package]
name = "nurunuru-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core Nostr engine: protocol logic, recommendation, caching via rust-nostr + nostrdb"

[dependencies]
nostr-sdk = { workspace = true }
nostr = { workspace = true }
nostr-ndb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
