[package]
name = "nurunuru-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UniFFI bindings for nurunuru-core (Kotlin, Swift, WASM)"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "nurunuru_ffi"

[dependencies]
nurunuru-core = { path = "../nurunuru-core" }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { workspace = true }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
